# FuXi-reincarnate

./: .gitignore  .travis.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DataDescriptionLanguage.md  README.md  pyproject.toml  run_tests.py  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
docs/: FuXi.rst  FuXiUserManual.rst  InfixOwl.rst  Installation_Testing.rst  Overview.rst  Quickstart.rst  ReteActions.rst  TopDownSW.rst  Tutorial.rst  conf.py  index.rst
documentation/html/_sources/: index.txt
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py
lib/: __init__.py
lib/FuXi/: __init__.py
lib/FuXi/DLP/: __init__.py
lib/FuXi/Horn/: __init__.py
lib/FuXi/LP/: __init__.py
lib/FuXi/Rete/: __init__.py
lib/FuXi/SPARQL/: __init__.py
lib/FuXi/Syntax/: __init__.py
lib/LP/: BackwardFixpointProcedure.py  __init__.py
lib/Rete/: AlphaNode.py  TopDown.py  Util.py
lib/Syntax/: InfixOWL.py
lib/fuxi/: predicates.py  types.py
lib/fuxi/DLP/: CompletionReasoning.py  ConditionalAxioms.py  DLNormalization.py  LPNormalForms.py  Negation.py  __init__.py
lib/fuxi/Horn/: HornRules.py  PositiveConditions.py  RIFCore.py  __init__.py  rif_grammar.lark  rif_presentation_parser.py  rif_presentation_serializer.py  rif_validator.py  rif_xml_serializer.py
lib/fuxi/LP/: BackwardFixpointProcedure.py  __init__.py  testSeralizationOfEval.py
lib/fuxi/Rete/: AlphaNode.py  BetaNode.py  BuiltinPredicates.py  CommandLine.py  IteratorAlgebra.py  Magic.py  Network.py  Node.py  Proof.py  ReteVocabulary.py  RuleStore.py  SidewaysInformationPassing.py  TopDown.py  Util.py  __init__.py
lib/fuxi/SPARQL/: BackwardChainingStore.py  __init__.py  service.py  utilities.py
lib/fuxi/Syntax/: InfixOWL.py
lib/fuxi/cli/: core.py  owl.py  proof.py  renderers.py  shared.py
n3/w3c/euler/: sublass.n3
skill/: SKILL.md
test/: OWLsuite.py  additionalDLPTests.py  command_line_facts.n3  command_line_test_rules.n3  conftest.py  suite.py  testBFPQueryMemoization.py  testExistentialInHead.py  testOWL.py  testOWL2.py  testReteAction.py  testSkolemization.py  test_batch_unify_derived_predicate_routing.py  test_batch_unify_sparql_service.py  test_bfp_ask_transitive.py  test_builtin_ordering.py  test_cli_core.py  test_cli_owl.py  test_cli_proof.py  test_cli_sparql_parse.py  test_command_line.py  test_coverage_targets.py  test_existential_in_head.py  test_infixowl_annotations.py  test_infixowl_api.py  test_infixowl_owlapy_adapters.py  test_issue_008.py  test_issue_041.py  test_namespace_bindings.py  test_network_pattern_list.py  test_network_reset.py  test_remote_sparql_interlocution.py  test_render_graphviz.py  test_sameAs.py  test_serialization_of_eval.py  test_sip_imdb.py  test_superproperty_entailment.py
test/RIF/: test_manifest_harness.py
test/SPARQL/: notes.txt  test.py  test_sparql_entailment.py  test_sparql_interlocution.py
test/SPARQL/W3C/: rdf-rdfs.n3
test/regression/: test_issue_41.py
tools/: rdfpipe.py
