[project]
name = "fuxi"
version = "2.0.1"
description = "An OWL / N3-based in-memory, logic reasoning system for RDF"
requires-python = ">=3.13"
license = {text = "Apache"}
authors = [{name = "Chime Ogbuji", email = "chimezie@gmail.com"}]
maintainers = [{name = "Chime Ogbuji", email = "chimezie@gmail.com"}]
readme = "README.md"
keywords = ["python", "logic", "owl", "rdf", "dlp", "n3", "rule", "reasoner"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "frozendict",
    "pyparsing",
    "rdflib>=7.4",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "graphviz",
    "mypy",
    "pytest",
    "pytest-cov",
    "radon",
    "ruff",
    "vulture",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid",
]

[project.scripts]
fuxi = "fuxi.Rete.CommandLine:main"
"fuxi.core" = "fuxi.cli.core:main"
"fuxi.proof" = "fuxi.cli.proof:main"
"fuxi.owl" = "fuxi.cli.owl:main"

[project.urls]
Homepage = "https://github.com/chimezie/FuXi-reincarnate/"
Documentation = "https://fuxi.readthedocs.io/"
Changelog = "https://github.com/chimezie/FuXi-reincarnate/blob/main/CHANGELOG.md"
Issues = "https://github.com/chimezie/FuXi-reincarnate/issues"
Source = "https://github.com/chimezie/FuXi-reincarnate"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: slower integration-style tests",
    "slow: slow tests",
]

[tool.fuxi.testing]
owl_cli = "uv run --active pytest test/testOWL.py"
owl_strategy_default = "bfp"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "FA", "UP"]
ignore = [
#    "E501",
    "E203",
    "E231",
    "N999",
    "N813"
]
[tool.ruff.lint.per-file-ignores]
"lib/fuxi/DLP/__init__.py" = ["N802"]
"lib/fuxi/SPARQL/service.py" = ["N803"]
"test/SPARQL/*" = ["E501"]

[tool.coverage.run]
source = ["lib"]
omit = ["*/tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff.lint.isort]
known-first-party = ["fuxi"]

